# taska

.github/workflows/: ci.yml
backend/: .gitignore  README.md
backend/app/: Cargo.toml
backend/app/src/: builder.rs  main.rs
backend/common/error/src/: lib.rs
backend/context/app_context/: Cargo.toml
backend/context/app_context/src/: lib.rs
backend/context/mock_context/: Cargo.toml
backend/context/mock_context/src/: lib.rs
backend/domain/: Cargo.toml
backend/domain/src/: user.rs  user_repository.rs
backend/infra/api_server/: Cargo.toml
backend/infra/api_server/src/: api.rs  error_handler.rs  extracter.rs  lib.rs
backend/infra/api_server/src/users/: create.rs  get.rs  mod.rs
backend/tests/: Cargo.toml
backend/tests/src/: api.rs
backend/usecase/: Cargo.toml
backend/usecase/src/: user.rs
frontend/: elm.json
frontend/src/: Main.elm
src/: Main.elm
