[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taska-api = { path = "../app" }

[dev-dependencies]
rstest = "0.15.0"
anyhow = "1.0.65"
axum = "0.5.16"
axum-test-helper = "0.1.1"
tokio = { version = "1.21.1", features = ["full"] }

api_server = { path = "../infra/api_server" }